--- a/index_copy.html
+++ b/index_copy.html
@@ -85,32 +85,32 @@ WebVRConfig = {
 <!--
   A polyfill for Promises. Needed for IE and Edge.
 -->
-<script src="node_modules/es6-promise.min.js"></script>
+<script src="nodemodules/es6-promise.min.js"></script>
 
 <!--
   three.js 3d library
 -->
-<script src="node_modules/three.min.js"></script>
+<script src="nodemodules/three.min.js"></script>
 
 <!--
   VRControls.js acquires positional information from connected VR devices and applies the transformations to a three.js camera object.
 -->
-<script src="node_modules/VRControls.js"></script>
+<script src="nodemodules/VRControls.js"></script>
 
 <!--
   VREffect.js handles stereo camera setup and rendering.
 -->
-<script src="node_modules/VREffect.js"></script>
+<script src="nodemodules/VREffect.js"></script>
 
 <!--
   A polyfill for WebVR using the Device{Motion,Orientation}Event API.
 -->
-<script src="node_modules/webvr-polyfill.min.js"></script>
+<script src="nodemodules/webvr-polyfill.min.js"></script>
 
 <!--
   A set of UI controls for entering VR mode.
 -->
-<script src="node_modules/webvr-ui.min.js"></script>
+<script src="nodemodules/webvr-ui.min.js"></script>
 
 <script src="ray-input-master/ray.min.js"></script>
 
