--- a/index_copy.html
+++ b/index_copy.html
@@ -9,7 +9,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
 <style>
-body {
+html, body {
   width: 100%;
   height: 100%;
   background-color: #000;
@@ -18,41 +18,38 @@ body {
   padding: 0;
   overflow: hidden;
 }
-
-/* Position the button on the bottom of the page. */
-#ui {
-  position: absolute;
-  bottom: 10px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  font-family: 'Karla', sans-serif;
+canvas {
+  width: 100%;
+  height: 100%;
+}
+#buttons {
+  position: fixed;
+  top: 0;
+  right: 0;
   z-index: 1;
+  background: white;
 }
 
-a#magic-window {
-  display: block;
-  color: white;
-  margin-top: 1em;
-}
 </style>
 </head>
 
 <body>
-  <div id="ui">
-    <div id="vr-button"></div>
-    <a id="magic-window" href="#">Try it without a headset</a>
+  <div id="buttons">
+    <button id="fullscreen">Fullscreen</button>
+    <button id="vr">VR (WebVR/Mobile only)</button>
   </div>
 </body>
 
 <script>
+
+
 /*
  * Debug parameters.
  */
-WebVRConfig = {
-  /**
-   * webvr-polyfill configuration
-   */
+/*WebVRConfig = {
+  
+   // webvr-polyfill configuration
+   
 
   // Forces availability of VR mode.
   //FORCE_ENABLE_VR: true, // Default: false.
@@ -79,7 +76,10 @@ WebVRConfig = {
   // and gl.TEXTURE_BINDING_2D for texture unit 0
   // Warning: enabling this might lead to rendering issues.
   //DIRTY_SUBMIT_FRAME_BINDINGS: true // default: false
-};
+}; */
+
+
+
 </script>
 
 <!--
@@ -110,12 +110,43 @@ WebVRConfig = {
 <!--
   A set of UI controls for entering VR mode.
 -->
-<script src="nodemodules/webvr-ui.min.js"></script>
+<!-- <script src="nodemodules/webvr-ui.min.js"></script> -->
 
-<script src="ray-input-master/ray.min.js"></script>
+<!-- <script src="ray-input-master/ray.min.js"></script> -->
+
+<!-- OrbitControls.js for controlling camera on desktop.  -->
+<!-- <script src="third_party/three.js/OrbitControls.js"></script> -->
+<script src="nodemodules/OrbitControls.js"></script>
 
 
 <script>
+
+// Get config from URL
+var config = (function() {
+  var config = {};
+  var q = window.location.search.substring(1);
+  if (q === '') {
+    return config;
+  }
+  var params = q.split('&');
+  var param, name, value;
+  for (var i = 0; i < params.length; i++) {
+    param = params[i].split('=');
+    name = param[0];
+    value = param[1];
+    // All config values are either boolean or float
+    config[name] = value === 'true' ? true :
+                   value === 'false' ? false :
+                   parseFloat(value);
+  }
+  return config;
+})();
+
+var polyfill = new WebVRPolyfill(config);
+
+console.log("Using webvr-polyfill version " + WebVRPolyfill.version +
+            " with configuration: " + JSON.stringify(config));
+
 // Last time the scene was rendered.
 var lastRenderTime = 0;
 // Currently active VRDisplay.
@@ -133,13 +164,15 @@ var vrButton;
 
 var step;
 
-var rayInput;
+//var rayInput;
+
+var renderer;
 
 
 function onLoad() {
   // Setup three.js WebGL renderer. Note: Antialiasing is a big performance hit.
   // Only enable it if you actually need to.
-  var renderer = new THREE.WebGLRenderer({antialias: true});
+  renderer = new THREE.WebGLRenderer({antialias: false});
   renderer.setPixelRatio(window.devicePixelRatio);
 
   // Append the canvas element created by the renderer to document body element.
@@ -152,9 +185,9 @@ function onLoad() {
   var aspect = window.innerWidth / window.innerHeight;
   camera = new THREE.PerspectiveCamera(75, aspect, 0.1, 10000);
 
-  controls = new THREE.VRControls(camera);
-  controls.standing = true;
-  camera.position.y = controls.userHeight;
+ // controls = new THREE.VRControls(camera);
+ // controls.standing = true;
+ // camera.position.y = controls.userHeight;
 
   // Apply VR stereo rendering to renderer.
   effect = new THREE.VREffect(renderer);
@@ -164,7 +197,7 @@ function onLoad() {
   var loader = new THREE.TextureLoader();
   loader.load('img/box.png', onTextureLoaded);
 
-  
+
 
 
   // Create 3D objects.
@@ -185,7 +218,7 @@ function onLoad() {
  step.position.set(0, 0, 0);
 
   // Position cube mesh to be right in front of you.
-  cube.position.set(0, controls.userHeight, -1.5);
+  //cube.position.set(0, controls.userHeight, -1.5);
 
   // Add cube mesh to your three.js scene
  // scene.add(cube);
@@ -221,7 +254,7 @@ function onLoad() {
   step6.material.opacity = 0.3;
 
 
-  rayInput = new RayInput.default(
+ /* rayInput = new RayInput.default(
       camera, renderer.domElement);
   rayInput.setSize(renderer.getSize());
   console.log('ray input: ' + rayInput + ' .');
@@ -231,7 +264,7 @@ function onLoad() {
   rayInput.on('rayout', this.onDeselected);
   rayInput.on('rayup', this.onDeselected);
   console.log(rayInput.getMesh());
-  scene.add(rayInput.getMesh());
+  scene.add(rayInput.getMesh()); */
 
  // scene.add(step);
 
@@ -256,10 +289,11 @@ function onLoad() {
   window.addEventListener('resize', onResize, true);
   window.addEventListener('vrdisplaypresentchange', onResize, true);
 
+setupStage();
   
 
   // Initialize the WebVR UI.
-  var uiOptions = {
+ /* var uiOptions = {
     color: 'black',
     background: 'white',
     corners: 'square'
@@ -278,7 +312,7 @@ function onLoad() {
   document.getElementById('vr-button').appendChild(vrButton.domElement);
   document.getElementById('magic-window').addEventListener('click', function() {
     vrButton.requestEnterFullscreen();
-  });
+  });*/
 }
 
 function onSelected(optMesh) {
@@ -314,7 +348,7 @@ function onTextureLoaded(texture) {
 
   // For high end VR devices like Vive and Oculus, take into account the stage
   // parameters provided.
-  setupStage();
+  //setupStage();
 }
 
 
@@ -328,15 +362,21 @@ function animate(timestamp) {
   cube.rotation.y += delta * 0.0006;
 
   // Only update controls if we're presenting.
-  if (vrButton.isPresenting()) {
+ // if (vrButton.isPresenting()) {
     controls.update();
-  }
+ // }
   // Render the scene.
   effect.render(scene, camera);
 
-  vrDisplay.requestAnimationFrame(animate);
 
-  rayInput.update();
+
+  if (vrDisplay) {
+    vrDisplay.requestAnimationFrame(animate);
+  } else {
+    requestAnimationFrame(animate);
+  }
+
+ // rayInput.update();
 }
 
 function onResize(e) {
@@ -348,15 +388,42 @@ function onResize(e) {
 // Get the HMD, and if we're dealing with something that specifies
 // stageParameters, rearrange the scene.
 function setupStage() {
-  navigator.getVRDisplays().then(function(displays) {
+  console.log(navigator);
+  console.log('setupStage');
+  if (navigator.getVRDisplays) {
+    
+    console.log('navigator has vr displays')
+
+    navigator.getVRDisplays().then(function(displays) {
+    console.log('vr displays length = ' + displays.length);
     if (displays.length > 0) {
       vrDisplay = displays[0];
+
+      controls = new THREE.VRControls(camera);
+      camera.position.y = controls.userHeight;
+
       if (vrDisplay.stageParameters) {
         setStageDimensions(vrDisplay.stageParameters);
       }
       vrDisplay.requestAnimationFrame(animate);
+    } else {
+      controls = new THREE.OrbitControls(camera);
+      controls.target.set(0, 0, -1);
+      controls.standing = true;
+
+      // Disable the "Enter VR" button
+    var enterVRButton = document.querySelector('#vr');
+    enterVRButton.disabled = true;
+  //    controls.target.set(0, 0, -1);
+   //   camera.position.y = controls.userHeight;
+      console.log('on a desktop');
+      requestAnimationFrame(animate);
     }
-  });
+    });  
+  }
+
+
+  
 }
 
 function setStageDimensions(stage) {
@@ -400,6 +467,26 @@ var materials = {};
 	}
 
 window.addEventListener('load', onLoad);
+
+// Button click handlers.
+document.querySelector('button#fullscreen').addEventListener('click', function() {
+  enterFullscreen(renderer.domElement);
+});
+document.querySelector('button#vr').addEventListener('click', function() {
+  vrDisplay.requestPresent([{source: renderer.domElement}]);
+});
+
+function enterFullscreen (el) {
+  if (el.requestFullscreen) {
+    el.requestFullscreen();
+  } else if (el.mozRequestFullScreen) {
+    el.mozRequestFullScreen();
+  } else if (el.webkitRequestFullscreen) {
+    el.webkitRequestFullscreen();
+  } else if (el.msRequestFullscreen) {
+    el.msRequestFullscreen();
+  }
+}
 
 </script>
 
