--- a/index_copy.html
+++ b/index_copy.html
@@ -185,6 +185,9 @@ function onLoad() {
   var aspect = window.innerWidth / window.innerHeight;
   camera = new THREE.PerspectiveCamera(75, aspect, 0.1, 10000);
 
+  camera.position.y = 2;
+  camera.position.x = 2;
+
  // controls = new THREE.VRControls(camera);
  // controls.standing = true;
  // camera.position.y = controls.userHeight;
@@ -400,7 +403,7 @@ function setupStage() {
       vrDisplay = displays[0];
 
       controls = new THREE.VRControls(camera);
-      camera.position.y = controls.userHeight;
+      //camera.position.y = controls.userHeight;
 
       if (vrDisplay.stageParameters) {
         setStageDimensions(vrDisplay.stageParameters);
