--- a/index_copy.html
+++ b/index_copy.html
@@ -165,7 +165,7 @@ var vrButton;
 
 var step;
 
-//var rayInput;
+var rayInput;
 
 var renderer;
 
@@ -359,7 +359,7 @@ function animate(timestamp) {
     requestAnimationFrame(animate);
   }
 
- // rayInput.update();
+  rayInput.update();
 }
 
 function onResize(e) {
