--- a/index_copy.html
+++ b/index_copy.html
@@ -35,7 +35,7 @@ canvas {
 
 <body>
   <div id="buttons">
-    <button id="fullscreen">Fullscreen!</button>
+    <button id="fullscreen">Fullscreen.</button>
     <button id="vr">VR (WebVR/Mobile only)</button>
   </div>
 </body>
@@ -186,9 +186,9 @@ function onLoad() {
   var aspect = window.innerWidth / window.innerHeight;
   camera = new THREE.PerspectiveCamera(75, aspect, 0.1, 10000);
 
-  camera.position.y = 3;
-  camera.position.x = 3;
-  camera.position.z = 3;
+ // camera.position.y = 3;
+ // camera.position.x = 3;
+ // camera.position.z = 3;
 
  // controls = new THREE.VRControls(camera);
  // controls.standing = true;
@@ -385,7 +385,7 @@ function setupStage() {
 
       controls = new THREE.VRControls(camera);
       controls.standing = true;
-     // camera.position.y = controls.userHeight;
+      camera.position.y = controls.userHeight;
 
       if (vrDisplay.stageParameters) {
         setStageDimensions(vrDisplay.stageParameters);
