--- a/adtest.html
+++ b/adtest.html
@@ -389,7 +389,7 @@ function setupStage() {
 
       controls = new THREE.VRControls(camera);
       controls.standing = true;
-      camera.position.y = controls.userHeight;
+     // camera.position.y = controls.userHeight;
 
       if (vrDisplay.stageParameters) {
         setStageDimensions(vrDisplay.stageParameters);
