--- a/index_copy.html
+++ b/index_copy.html
@@ -35,7 +35,7 @@ canvas {
 
 <body>
   <div id="buttons">
-    <button id="fullscreen">Fullscreen.</button>
+    <button id="fullscreen">Fullscreen!</button>
     <button id="vr">VR (WebVR/Mobile only)</button>
   </div>
 </body>
