--- a/aframe/index.html
+++ b/aframe/index.html
@@ -16,6 +16,11 @@
       <a-box position="0 0.5 -2" height="0.05" material="src: greytile.jpg;"></a-box>
       <a-box position="0 0.5 -3" height="0.05" material="src: whitetile.jpg;"></a-box>
 
+      <a-entity position="0 2 0">
+      <a-camera>
+        <a-cursor></a-cursor>
+      </a-camera>
+      </a-entity>
     </a-scene>
   </body>
 </html>
