--- a/aframe/index.html
+++ b/aframe/index.html
@@ -52,12 +52,10 @@
     </script>
     <a-scene>
       
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-sphere position="-4 0.75 -6" radius="0.25" color="#EF2D5E"></a-sphere>
+      <a-cylinder position="0 0.75 -4" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-sky color="#ECECEC"></a-sky>
-
-     
 
       <a-box id="box1" cursor-listener position="0 0.5 0" height="0.05" material="src: greytile.jpg;"></a-box>
       <a-box id="box2" cursor-listener position="0 0.5 -1" height="0.05" material="src: whitetile.jpg;"></a-box>
@@ -73,9 +71,7 @@
       <a-box id="box12" cursor-listener position="-1 0.5 -6" height="0.05" material="src: whitetile.jpg;"></a-box>
       <a-box id="box13" cursor-listener position="-2 0.5 -6" height="0.05" material="src: greytile.jpg;"></a-box>
       <a-box id="box14" cursor-listener position="-3 0.5 -6" height="0.05" material="src: whitetile.jpg;"></a-box>
-      <a-box id="box15" cursor-listener position="-4 0.5 -6" height="0.05" material="src: greytile.jpg; color: purple;"></a-box>
-
-
+      <a-box id="box15" cursor-listener position="-4 0.5 -6" height="0.05" material="src: greytile.jpg;"></a-box>
 
       <a-entity id='camera-entity' position="0 1.6 0">
       <a-camera>
