--- a/aframe/index.html
+++ b/aframe/index.html
@@ -75,7 +75,11 @@
 
       <a-entity id='camera-entity' position="0 1.6 0">
       <a-camera>
-        <a-cursor></a-cursor>
+        <a-entity cursor="fuse: false; fuseTimeout: 500"
+            position="0 0 -1"
+            geometry="primitive: ring; radiusInner: 0.02; radiusOuter: 0.028"
+            material="color: black; shader: flat">
+  </a-entity>
       </a-camera>
       </a-entity>
     </a-scene>
