--- a/aframe/index.html
+++ b/aframe/index.html
@@ -39,11 +39,11 @@
 
       var position = evt.target.getAttribute('position');
 
-      var cameraPosition = {};
-      cameraPosition['x'] = position['x'];
-      cameraPosition['y'] = '1.6';
-      cameraPosition['z'] = position['z'];
-      newPositionString = position['x'] + ' 1.6 ' + position['z'];
+      // var cameraPosition = {};
+      // cameraPosition['x'] = position['x'];
+      // cameraPosition['y'] = '1.6';
+      // cameraPosition['z'] = position['z'];
+      newPositionString = position['x'] + ' 0 ' + position['z'];
 
       console.log('I was clicked at: ', evt.detail.intersection.point);
 
@@ -60,9 +60,20 @@
     </script>
     <a-scene>
       <a-assets>
-        <a-asset-item id="saucer-obj" src="saucer.obj" ></a-asset-item>
+        <a-asset-item id="saucer-obj" src="saucernormals.obj" ></a-asset-item>
+        <a-asset-item id="saucer-mtl" src="saucernormals.mtl"></a-asset-item>
       </a-assets>
-      <a-entity obj-model="obj: #saucer-obj; " position="-0.35 1.5 -1.0" scale="0.2 0.2 0.2" ></a-entity>
+      <a-entity obj-model="obj: #saucer-obj; mtl: #saucer-mtl" scale="0.2 0.2 0.2" >
+       
+        <a-entity position="5 0 0"></a-entity>
+        <a-animation attribute="rotation"
+               dur="1000"
+               fill="forwards"
+               to="0 360 0"
+               easing="linear"
+               repeat="indefinite"></a-animation>
+               <a-animation attribute="position" from="1 1 1" to="2 4 -8" repeat="indefinite"></a-animation>
+      </a-entity>
       <a-sphere position="-4 0.75 -6" radius="0.25" color="#EF2D5E"></a-sphere>
       <a-cylinder position="0 0.75 -4" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
