--- a/steps/index.html
+++ b/steps/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<script type="text/javascript" src="levels.js"></script>
     <meta charset="UTF-8">
     <title>Title</title>
     <style type="text/css">
@@ -15,29 +16,19 @@
 </head>
 <body>
     <script type="module">
+    	console.log("run native js");
         // Import three
         import * as THREE from 'https://unpkg.com/three/build/three.module.js';
         // Import the default VRButton
         import { VRButton } from 'https://unpkg.com/three/examples/jsm/webxr/VRButton.js';
+        import { OrbitControls } from 'https://unpkg.com/three/examples/jsm/controls/OrbitControls.js';
 
-        let level1 = {
-          config: {start: [0,0], end: [2,4]},
-          steps: [
-            [0, 0],
-            [1, 0],
-            [2, 0],
-            [2, -1],
-            [2, -2],
-            [2, -3],
-            [2, -4],
-          ],     
-        };
+        
 
-        console.log("start x = " + level1.config.start[0]);
-        console.log("start y = " + level1.config.start[1]);
+        console.log("Number of levels loaded in " + levels.length);
 
-        for (let i = 0; i < level1.steps.length; i++) {
-        	console.log("Step " + i + " = " + level1.steps[i]);
+        for (let i = 0; i < levels[0].steps.length; i++) {
+        	console.log("Step " + i + " = " + levels[0].steps[i]);
         }
 
         // Make a new scene
@@ -49,6 +40,8 @@
         let camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 100);
         camera.position.set(0, 2, 0);
         scene.add(camera);
+
+        let controls = new OrbitControls(camera, document.body);
 
         // Add some lights
         var light = new THREE.DirectionalLight(0xffffff,0.5);
@@ -72,13 +65,13 @@
         cube2.position.set(3, 1.5, -10);
         scene.add(cube2);
 
-        for (let i = 0; i < level1.steps.length; i++) {
+        for (let i = 0; i < levels[0].steps.length; i++) {
         	let step = new THREE.Mesh(
                 new THREE.BoxBufferGeometry(0.9,0.1,0.9),
                 new THREE.MeshLambertMaterial({color:'yellow'})
             );
-            let x = level1.steps[i][0];
-            let z = level1.steps[i][1];
+            let x = levels[0].steps[i][0];
+            let z = levels[0].steps[i][1];
             console.log("creating a new step at " + x + ", 10, " + z);
             step.position.set(x, 0, z);
 
