--- a/steps/index.html
+++ b/steps/index.html
@@ -92,6 +92,14 @@
         // Add a button to enter/exit vr to the page
         document.body.appendChild(VRButton.createButton(renderer));
 
+
+        let controller = renderer.xr.getController(0);
+        controller.addEventListener('select', onSelect);
+        controller.addEventListener('connected', function (event) {
+        	this.add(buildController(event.data));
+        })
+        scene.add(controller);
+
         // For AR instead, import ARButton at the top
         //    import { ARButton } from 'https://unpkg.com/three/examples/jsm/webxr/ARButton.js';
         // then create the button
@@ -104,6 +112,29 @@
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
+        }
+
+        function buildController(data) {
+        	let geometry, material;
+
+        	switch (data.targetRayMode) {
+        		case 'tracked-pointer':
+        		    geometry = new THREE.BufferGeometry();
+        		    geometry.setAttribute( 'position', new THREE.Float32BufferAttribute( [ 0, 0, 0, 0, 0, - 1 ], 3 ) );
+			        geometry.setAttribute( 'color', new THREE.Float32BufferAttribute( [ 0.5, 0.5, 0.5, 0, 0, 0 ], 3 ) );
+			        material = new THREE.LineBasicMaterial( { vertexColors: true, blending: THREE.AdditiveBlending } );
+                    return new THREE.Line( geometry, material );
+
+                case 'gaze':
+                    geometry = new THREE.RingBufferGeometry( 0.02, 0.04, 32 ).translate( 0, 0, - 1 );
+				    material = new THREE.MeshBasicMaterial( { opacity: 0.5, transparent: true } );
+				    return new THREE.Mesh( geometry, material );			
+        	}
+        }
+
+        function onSelect() {
+
+
         }
 
         function render(time) {
