--- a/steps/index.html
+++ b/steps/index.html
@@ -15,6 +15,7 @@
     </style>
 </head>
 <body>
+	<audio id="scream" src="scream.mp3" type="audio/mpeg"></audio>
     <script type="module">
     	console.log("run native js");
         // Import three
@@ -109,6 +110,7 @@
         window.addEventListener('resize', onWindowResize, false);
 
         function onWindowResize() {
+
             camera.aspect = window.innerWidth / window.innerHeight;
             camera.updateProjectionMatrix();
             renderer.setSize(window.innerWidth, window.innerHeight);
@@ -116,8 +118,9 @@
 
         function buildController(data) {
         	let geometry, material;
-
+            console.log("data: " + data);
         	switch (data.targetRayMode) {
+
         		case 'tracked-pointer':
         		    geometry = new THREE.BufferGeometry();
         		    geometry.setAttribute( 'position', new THREE.Float32BufferAttribute( [ 0, 0, 0, 0, 0, - 1 ], 3 ) );
@@ -133,7 +136,8 @@
         }
 
         function onSelect() {
-
+          
+        	document.getElementById('scream').play();
 
         }
 
