--- a/steps/index.html
+++ b/steps/index.html
@@ -181,6 +181,7 @@
         function render(time) {
             // Rotate the cube
             cube.rotation.y = time / 1000;
+            cube.rotation.z = time / 500;
             // Draw everything
             renderer.render(scene, camera);
         }
